fix navbar and spacing issue

--- a/style.css
+++ b/style.css
@@ -96,18 +96,26 @@ section .content {
 }
 
 
-@media (min-width: 992px) {
-  #networks img {
-    -moz-transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-  }
+#networks img {
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
 
-  #networks img:hover {
-    -moz-transform: scale(1.6);
-    -webkit-transform: scale(1.6);
-    transform: scale(1.6);
-  }
+#networks img:hover {
+  -moz-transform: scale(1.6);
+  -webkit-transform: scale(1.6);
+  transform: scale(1.6);
+}
+
+
+@media (max-width: 992px) {
+   #networks img {
+     display: none;
+   }
+   .navbar-toggle {
+    display: none;
+   }
 }
 
 
